Уточнение информации по опыту работы

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 
           <li>
             <div class="d-flex f-align-center">
-              <p class="date"><b>2012 - 2017</b><br>
+              <p class="date"><b>2011 - 2017</b><br>
                 (г. Москва)
               </p>
               <div class="logo mx-2">
@@ -403,14 +403,14 @@
 
           <li>
             <div class="d-flex f-align-center">
-              <p class="date"><b>2005-2011</b><br>
+              <p class="date"><b>2006-2010</b><br>
                 (г. Пенза)
               </p>
               <div class="logo mx-2">
                 <img src="img/positronica.jpg" width="288px" height="48px" alt="Позитроника">
               </div>
               <p>
-                Инженер по сборке и ремонту ПК<br>
+                сервисный инженер / администратор<br>
                 гипермаркет "Позитроника"
                 <br>(ООО "Супермаркет")
               </p>
@@ -496,7 +496,7 @@
               <img src="img/1c-bitrix.svg" width="246px" height="48px" alt="1C:Битрикс">
             </div>
             <p class="mr-2">
-              <b>2012 - 2017</b><br>
+              <b>2011 - 2017</b><br>
               Фреймворк 1С:Bitrix
             </p>
             <div>
