Добавлен сертифиакт от SOLOLEARN по JQuery

--- a/index.html
+++ b/index.html
@@ -465,9 +465,12 @@
                       <i class="fa fa-external-link"></i>
                     </a> )
                   </span>
-                  <div hidden>
-                    jQuery - https://www.sololearn.com/Certificate/-16609287/pdf/
-                  </div>
+                  <span>
+                    <a class="ml-1 link magnific-iframe tooltip tip-sertificate" href="img/certificates/sololearn_jquery.pdf">jQuery</a>
+                    ( <a class="external-link no-underline tooltip tip-aria" href="https://www.sololearn.com/Certificate/1082-16609287/pdf/" target="_blank" rel="nofollow noopener" aria-label="Перейти к оригиналу сертификата">
+                      <i class="fa fa-external-link"></i>
+                    </a> )
+                  </span>
               </div>
             </div>
           </li>
