В навыки добавлен Npm

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <h3 class="fun">Навыки<span>ls -lhF | grep -isv 'hobby'</span></h3>
         <ul>
           <li>Laravel, PHP 5/7, MySQL</li>
-          <li>Git (ранее Svn), Composer</li>
+          <li>Git (ранее Svn), Composer, Npm</li>
           <li>HTML5, CSS3, Bootstrap, Blade, Семантическая верстка</li>
           <li>JavaScript, jQuery</li>
           <li>Unix (Fedora, Ubuntu, Debian) / Bash / CLI</li>
