--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <li>Laravel, PHP 5/7, MySQL</li>
           <li>Git (ранее Svn), Composer, Npm</li>
           <li>HTML5, CSS3, Bootstrap, Blade, Семантическая верстка</li>
-          <li>JavaScript, jQuery</li>
+          <li>основы Vue.js, JavaScript, jQuery</li>
           <li>Unix (Fedora, Ubuntu, Debian) / Bash / CLI</li>
           <li>CMS: 1C:Bitrix, Joomla</li>
           <li>Софт: PhpStorm, Sublime, SqlWorkbench, Meld, Postman </li>
@@ -163,6 +163,29 @@
         <h3 class="fun">Проекты<span>git branch -a --list</span></h3>
 
         <div class="grid">
+
+          <figure class="effect-kira">
+            <img src="projects/vuejs-learn/main.png" alt="Unique" width="440px" height="250px">
+            <figcaption>
+              <h4>ToDo List</h4>
+              <div class="desc">
+                <p class="top">Учебный проект [2021]<br>"ToDo List"</p>
+                <p class="middle">
+                  <a class="magnific-iframe" href="projects/vuejs-learn/index.html">Подробнее</a>
+                  <span>
+                    <a class="tooltip tip-aria" href="https://github.com/Avxodiar/vuejs-learn" target="_blank" rel="nofollow noopener" aria-label="Посмотреть исходники">
+                      <i class="fa fa-github"></i>
+                    </a>
+                    <a class="tooltip tip-aria" href="https://avxodiar.github.io/vuejs-learn/" target="_blank" rel="nofollow noopener" aria-label="Посмотреть сайт">
+                      <i class="fa fa-external-link"></i>
+                    </a>
+                  </span>
+                </p>
+                <p class="bottom">#Vue.js #Npm #Vue Cli</small>
+              </div>
+            </figcaption>
+          </figure>
+
           <figure class="effect-kira">
             <img src="projects/unique/main.png" alt="Unique" width="440px" height="250px">
             <figcaption>
