Обновлено описание проекта по изучению Vue.js

--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
         <div class="grid">
 
           <figure class="effect-kira">
-            <img src="projects/vuejs-learn/main.png" alt="Unique" width="440px" height="250px">
+            <img src="projects/vuejs-learn/main.jpg" alt="Изучение Vue.js" width="440px" height="250px">
             <figcaption>
-              <h4>ToDo List</h4>
+              <h4>Изучение Vue.js</h4>
               <div class="desc">
-                <p class="top">Учебный проект [2021]<br>"ToDo List"</p>
+                <p class="top">Учебный проект [2021]<br>Список дел и "Крестики-Нолики"</p>
                 <p class="middle">
                   <a class="magnific-iframe" href="projects/vuejs-learn/index.html">Подробнее</a>
                   <span>
@@ -181,7 +181,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#Vue.js #Npm #Vue Cli</small>
+                <p class="bottom">#Vue.js #Npm #Vue Cli</p>
               </div>
             </figcaption>
           </figure>
@@ -200,7 +200,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#Laravel #Eloquent #Composer #Bootstrap</small>
+                <p class="bottom">#Laravel #Eloquent #Composer #Bootstrap</p>
               </div>
             </figcaption>
           </figure>
@@ -222,7 +222,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#HTML5 #CSS3 #JavaScript</small>
+                <p class="bottom">#HTML5 #CSS3 #JavaScript</p>
               </div>
             </figcaption>
           </figure>
@@ -241,7 +241,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#PHP #MySqli #composer</small>
+                <p class="bottom">#PHP #MySqli #composer</p>
               </div>
             </figcaption>
           </figure>
@@ -263,7 +263,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#javascript</small>
+                <p class="bottom">#javascript</p>
               </div>
             </figcaption>
           </figure>
@@ -285,7 +285,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#HTML5 #CSS3 #javascript</small>
+                <p class="bottom">#HTML5 #CSS3 #javascript</p>
               </div>
             </figcaption>
           </figure>
@@ -307,7 +307,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#HTML5 #CSS3 #javascript</small>
+                <p class="bottom">#HTML5 #CSS3 #javascript</p>
               </div>
             </figcaption>
           </figure>
@@ -326,7 +326,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#1С:Bitrix #PHP</small>
+                <p class="bottom">#1С:Bitrix #PHP</p>
               </div>
             </figcaption>
           </figure>
@@ -345,7 +345,7 @@
                     (закрыт в 2016)
                   </span>
                 </p>
-                <p class="bottom">#Joomla #PHP #HTML #CSS</small>
+                <p class="bottom">#Joomla #PHP #HTML #CSS</p>
               </div>
             </figcaption>
           </figure>
@@ -364,7 +364,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#Joomla #PHP #HTML #CSS</small>
+                <p class="bottom">#Joomla #PHP #HTML #CSS</p>
               </div>
             </figcaption>
           </figure>
@@ -383,7 +383,7 @@
                     </a>
                   </span>
                 </p>
-                <p class="bottom">#PHP #HTML #CSS</small>
+                <p class="bottom">#PHP #HTML #CSS</p>
               </div>
             </figcaption>
           </figure>
@@ -495,6 +495,7 @@
                     </a> )
                   </span>
               </div>
+            </div>
             </div>
           </li>
 
