Добавлен проект Click-O-Meter

--- a/index.html
+++ b/index.html
@@ -165,6 +165,25 @@
         <div class="grid">
 
           <figure class="effect-kira">
+            <img src="projects/click-o-meter/main.png" alt="Unique" width="440px" height="250px">
+            <figcaption>
+              <h4>Click-O-Meter</h4>
+              <div class="desc">
+                <p class="top">Тестовый проект [2021]<br> по построению карты кликов</p>
+                <p class="middle">
+                  <a class="magnific-iframe" href="projects/click-o-meter/index.html">Подробнее</a>
+                  <span>
+                    <a class="tooltip tip-aria" href="https://github.com/Avxodiar/click-o-meter" target="_blank" rel="nofollow noopener" aria-label="Посмотреть исходники">
+                      <i class="fa fa-github"></i>
+                    </a>
+                  </span>
+                </p>
+                <p class="bottom">#Laravel5 #test-project #Heatmap </p>
+              </div>
+            </figcaption>
+          </figure>
+
+          <figure class="effect-kira">
             <img src="projects/vuejs-learn/main.jpg" alt="Изучение Vue.js" width="440px" height="250px">
             <figcaption>
               <h4>Изучение Vue.js</h4>
